AZUREUS CHANGELOG
-----------------

2007.02.xx | Azureus 3.0.0.7

FEATURE: Core | Alerts can now be shown in individual message popup boxes [amc1]
FEATURE: Core | Alerts can now be suppressed and shown on demand [amc1]

CHANGE: Core  | Include msvcr71.dll in Windows installation bundles, for compatibility with Java6 [Nolar]



2007.01.22 | Azureus 2.5.0.4 / 3.0.0.6

FEATURE: Core | New users default save directory is now located in their "My Documents" directory, under "Azureus Downloads" [TuxPaper]
FEATURE: Core | Show alerts raised during closedown on next start as these often don't get displayed due to UI shutdown [Parg]
FEATURE: Core | Allow plugin installs to place jars into the plugin-shared "shared/lib" directory [Parg]
FEATURE: Plug | Unsafe config read/writing [parg]
FEATURE: Plug | Plugins can now open and close download bars [amc1]

CHANGE: Core  | Added scrape delay for stopped/errored torrents, and torrents with high share ratios [TuxPaper]
CHANGE: Core  | Allow only one active scrape for each tracker [TuxPaper]
CHANGE: Core  | Release piece-map when not required [Parg]
CHANGE: Core  | ASN lookup via DNS queries only [Parg]
CHANGE: Core  | Full recheck of torrent when part of torrent fails hash check on completion [TuxPaper]
CHANGE: Core  | Take note of banned IPs when we have IP filter turned off - these are independent [Parg]
CHANGE: Core  | Disable download peer caching for private torrents [Parg]
CHANGE: Core  | Disconnect currently connected peers on tracker URL change for private torrents [Parg]
CHANGE: Core  | Remove unused download/upload specific stats from version-check message [Parg]
CHANGE: Core  | Include IP override in NAT check message for NAT check server to use [Parg]
CHANGE: Plug  | Timeout UPnP port releases during closedown to prevent Azureus hanging [Parg]

BUGFIX: Core  | Fix choke/unchoke cycle bug for lan local peers [Nolar]
BUGFIX: Core  | Fix auto moving torrent data with DND files [TuxPaper]